// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextArea /> should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0px;
  margin-top: 0px;
}

.c2 {
  margin-bottom: 4px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
}

.c11 {
  margin-left: 0px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c4 {
  padding: 0;
  margin: 0;
  color: hsla(217,18%,45%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
}

.c6 {
  padding: 0;
  margin: 0;
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
}

.c9 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: transparent;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  width: 100%;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c9::-webkit-input-placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c9::-moz-placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c9:-ms-input-placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c9::placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c9:focus {
  outline: none;
}

.c10 {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  opacity: 0;
  margin-left: 0;
  background-color: hsla(213,89%,56%,1);
  border-width: 1px;
  height: 1px;
}

.c8 {
  background-color: hsla(216,15%,54%,0.09);
  border-bottom-color: hsla(216,15%,54%,0.18);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.c8:hover {
  background-color: hsla(216,15%,54%,0.18);
  border-bottom-color: hsla(216,15%,54%,0.18);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c8:focus-within {
  background-color: hsla(216,15%,54%,0.09);
  border-bottom-color: hsla(216,15%,54%,0.18);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

<div>
  <div
    class=""
    data-blade-component="textarea"
  >
    <div
      class="c0"
      display="flex"
    >
      <div
        class="c1"
        display="flex"
      >
        <label
          for="textarea-1-input-2"
          style="width: auto; flex-shrink: 0; margin-right: 16px; word-break: break-all;"
        >
          <div
            class="c2"
          >
            <div
              class="c3"
              display="flex"
            >
              <p
                class="c4 Text__StyledText-wkh56f-0"
                color="surface.text.subdued.lowContrast"
                data-blade-component="text"
                font-family="text"
                font-size="75"
                font-style="normal"
                font-weight="bold"
              >
                Enter name
              </p>
              <div
                class="c5"
              >
                <p
                  class="c6 Text__StyledText-wkh56f-0"
                  color="surface.text.normal.lowContrast"
                  data-blade-component="text"
                  font-family="text"
                  font-size="100"
                  font-style="normal"
                  font-weight="regular"
                />
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class="c7 c8"
        display="flex"
        width="100%"
      >
        <textarea
          aria-describedby=""
          aria-disabled="false"
          aria-invalid="false"
          aria-required="false"
          class="c9"
          id="textarea-1-input-2"
          rows="2"
          type="text"
        />
      </div>
      <div
        class=" c10"
      />
    </div>
    <div
      class="c11"
    >
      <div
        class="c12"
        display="flex"
      />
    </div>
  </div>
</div>
`;

exports[`<TextArea /> should set number of lines 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0px;
  margin-top: 0px;
}

.c2 {
  margin-bottom: 4px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
}

.c11 {
  margin-left: 0px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c4 {
  padding: 0;
  margin: 0;
  color: hsla(217,18%,45%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
}

.c6 {
  padding: 0;
  margin: 0;
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
}

.c9 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: transparent;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  width: 100%;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c9::-webkit-input-placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c9::-moz-placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c9:-ms-input-placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c9::placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c9:focus {
  outline: none;
}

.c10 {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  opacity: 0;
  margin-left: 0;
  background-color: hsla(213,89%,56%,1);
  border-width: 1px;
  height: 1px;
}

.c8 {
  background-color: hsla(216,15%,54%,0.09);
  border-bottom-color: hsla(216,15%,54%,0.18);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.c8:hover {
  background-color: hsla(216,15%,54%,0.18);
  border-bottom-color: hsla(216,15%,54%,0.18);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c8:focus-within {
  background-color: hsla(216,15%,54%,0.09);
  border-bottom-color: hsla(216,15%,54%,0.18);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

<div>
  <div
    class=""
    data-blade-component="textarea"
  >
    <div
      class="c0"
      display="flex"
    >
      <div
        class="c1"
        display="flex"
      >
        <label
          for="textarea-91-input-92"
          style="width: auto; flex-shrink: 0; margin-right: 16px; word-break: break-all;"
        >
          <div
            class="c2"
          >
            <div
              class="c3"
              display="flex"
            >
              <p
                class="c4 Text__StyledText-wkh56f-0"
                color="surface.text.subdued.lowContrast"
                data-blade-component="text"
                font-family="text"
                font-size="75"
                font-style="normal"
                font-weight="bold"
              >
                Enter name
              </p>
              <div
                class="c5"
              >
                <p
                  class="c6 Text__StyledText-wkh56f-0"
                  color="surface.text.normal.lowContrast"
                  data-blade-component="text"
                  font-family="text"
                  font-size="100"
                  font-style="normal"
                  font-weight="regular"
                />
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class="c7 c8"
        display="flex"
        width="100%"
      >
        <textarea
          aria-describedby=""
          aria-disabled="false"
          aria-invalid="false"
          aria-required="false"
          class="c9"
          id="textarea-91-input-92"
          rows="3"
          type="text"
        />
      </div>
      <div
        class=" c10"
      />
    </div>
    <div
      class="c11"
    >
      <div
        class="c12"
        display="flex"
      />
    </div>
  </div>
</div>
`;
